--- a/index.html
+++ b/index.html
@@ -6,4 +6,4 @@ AMADEUS SYSTEM
 </title>
 <body>
 <h1>AMADEUS SYSTEM은 Python과 Kivy로 작성된 음성인식 어시스턴트 입니다.</h1><br><br>
-<a href="amadeus.exe">다운로드</a>
+<a href="amadeus.zip">다운로드</a>
