--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
 AMADEUS SYSTEM
 </title>
 <body>
-<h1>AMADEUS SYSTEM은 Python과 Kivy로 작성된 음성인식 어시스턴트 입니다.</h1><br><br>
+<h1>AMADEUS SYSTEM은 Python으로 작성된 음성인식 어시스턴트 입니다.</h1><br><br>
+자세한 내용은 <a href="https://cafe.naver.com/shutainzugato">네이버 카페</a>를 참조하세요.
 <a href="ama.zip">다운로드</a>
