--- a/index.html
+++ b/index.html
@@ -7,4 +7,5 @@ AMADEUS SYSTEM
 <body>
 <h1>AMADEUS SYSTEM은 Python으로 작성된 음성인식 어시스턴트 입니다.</h1><br><br>
 자세한 내용은 <a href="https://cafe.naver.com/shutainzugato">네이버 카페</a>를 참조하세요.
-<a href="ama.zip">다운로드</a>
+<a href="ama.zip">파이썬 py 다운로드</a>
+<a href="dist.zip">윈도우용 exe 다운로드</a>
