--- a/index.html
+++ b/index.html
@@ -8,4 +8,4 @@ AMADEUS SYSTEM
 <h1>AMADEUS SYSTEM은 Python으로 작성된 음성인식 어시스턴트 입니다.</h1><br><br>
 자세한 내용은 <a href="https://cafe.naver.com/shutainzugato">네이버 카페</a>를 참조하세요.
 <a href="ama.zip">파이썬 py 다운로드</a>
-<a href="dist.zip">윈도우용 exe 다운로드</a>
+<a href="https://cafeattach.naver.net/8d189126380607b196791f2d11fd88f75705fb91/20200731_295_cafefile/30054420_1596121812295_37Ul63_zip/dist.zip?type=attachment">윈도우용 exe 다운로드</a>
