--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ Object.defineProperty(window, 'ysmm', {
 <meta property="og:title" content="Download">
 <meta property="og:description" content="Minimum Requirements: Android device running 2.3 or above At least 50 mb of free space Google App (For speech-recognition) Amadeus Kurisu: 0.9.5-beta.mkii   Amadeus Maho: 0.5.0-alpha.1   *Note:...">
 <meta property="og:image" content="http://amadeusproject.weebly.com/uploads/1/0/1/8/101865994/amadeuslogo.png">
-<meta property="og:url" content="http://amadeusproject.weebly.com/download.html">
+<meta property="og:url" content="index.html">
 
 
 
