--- a/command.html
+++ b/command.html
@@ -1,9 +1,16 @@
-'안녕'
-'무엇을 도와줄 수 있어?'
-'나무위키'
-'크롬'
-나머지는 구글에 
+<h2>현재 사용가능한 명령어</h2>
 
+<h3>
+안녕
+무엇을 할 수 있어?
+기분 좋아
+크리스티나
+나무위키
+너는 이미 죽어있다
+타임머신은 가능할까?
+넌 누구야
+크롬 열어
+</h3>
 
 
 
