--- a/command.html
+++ b/command.html
@@ -1,15 +1,15 @@
 <h2>현재 사용가능한 명령어</h2>
 
 <h3>
-안녕
-무엇을 할 수 있어?
-기분 좋아
-크리스티나
-나무위키
-너는 이미 죽어있다
-타임머신은 가능할까?
-넌 누구야
-크롬 열어
+안녕<br>
+무엇을 할 수 있어?<br>
+기분 좋아<br>
+크리스티나<br>
+나무위키<br>
+너는 이미 죽어있다<br>
+타임머신은 가능할까?<br>
+넌 누구야<br>
+크롬 열어<br>
 </h3>
 
 
