--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@ Object.defineProperty(window, 'ysmm', {
 	}
 });
 </script><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><script src="./index_files/gdprscript.js.다운로드"></script>
-		<title>Download - STEINS;GATE Amadeus Project</title><meta property="og:site_name" content="STEINS;GATE Amadeus Project">
+		<title>AMADEUS SYSTEM 다운로드</title><meta property="og:site_name" content="STEINS;GATE Amadeus Project">
 <meta property="og:title" content="Download">
-<meta property="og:description" content="Minimum Requirements: Android device running 2.3 or above At least 50 mb of free space Google App (For speech-recognition) Amadeus Kurisu: 0.9.5-beta.mkii   Amadeus Maho: 0.5.0-alpha.1   *Note:...">
+<meta property="og:description" content="AMADEUS SYSTEM ">
 <meta property="og:image" content="http://amadeusproject.weebly.com/uploads/1/0/1/8/101865994/amadeuslogo.png">
 <meta property="og:url" content="index.html">
 
@@ -286,7 +286,7 @@ var STYLE_PREFIX = 'wsite';
 			<div class="wsite-section-elements">
 				<h2 class="wsite-content-title"><font color="#ffffff"><font size="7">다운로드</font></font></h2>
 
-<div class="paragraph"><font color="#d5d5d5">최소사양:</font><ul><li><font color="#d5d5d5">Windows 7 이상의 컴퓨터</font></li><li><font color="#d5d5d5">100MB 정도의 디스크 용량</font></li><li><font color="#d5d5d5"><a href="https://cafeattach.naver.net/8d189126380607b196791f2d16fd8cf75705fb9a/20200731_295_cafefile/30054420_1596121812295_37Ul63_zip/dist.zip?type=attachment" target="_blank">첨부파일</a> pyinstaller 사용 </font></li></ul><br><font color="#d5d5d5">Python 프로젝트 파일: <a href="ama.zip" target="_blank">0.0.5 베타</a>&nbsp;<br>자세한 내용은 <a href='https://cafe.naver.com/shutainzugato/'>네이버 카페</a>를 참조해 주세요<br><br>새 업데이트:</font><ul><li><font color="#d5d5d5">2020.7.31 0.0.5 ver<br>명령어 수정 및 버그 수정</font></li></ul><br><font color="#d5d5d5">모든 명령을 보려면 <a href="command.html" target="_blank">여기를 누르세요</a>.​</font><br><br><font color="#d5d5d5"></font></div>
+<div class="paragraph"><font color="#d5d5d5">최소사양:</font><ul><li><font color="#d5d5d5">Windows 7 이상의 컴퓨터</font></li><li><font color="#d5d5d5">100MB 이상의 디스크 용량</font></li><li><font color="#d5d5d5"><a href="https://cafeattach.naver.net/8d189126380607b196791f2d16fd8cf75705fb9a/20200731_295_cafefile/30054420_1596121812295_37Ul63_zip/dist.zip?type=attachment" target="_blank">첨부파일</a> pyinstaller 사용 </font></li></ul><br><font color="#d5d5d5">Python 프로젝트 파일: <a href="ama.zip" target="_blank">0.0.5 베타</a>&nbsp;<br>자세한 내용은 <a href='https://cafe.naver.com/shutainzugato/'>네이버 카페</a>를 참조해 주세요<br><br>새 업데이트:</font><ul><li><font color="#d5d5d5">2020.7.31 0.0.5 ver<br>명령어 수정 및 버그 수정</font></li></ul><br><font color="#d5d5d5">모든 명령을 보려면 <a href="command.html" target="_blank">여기를 누르세요</a>.​</font><br><br><font color="#d5d5d5"></font></div>
 
 <div><div class="wsite-multicol"><div class="wsite-multicol-table-wrap" style="margin:0 -15px;">
 	<table class="wsite-multicol-table">
