--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@ var STYLE_PREFIX = 'wsite';
         <div class="container">
           <div class="logo"><span class="wsite-logo">
 
-	<a href="http://amadeusproject.weebly.com/">
+	<a href="https://download.amadeuspython.ml/">
 		<img src="./index_files/amadeuslogo.png">
 	</a>
 
