--- a/command.html
+++ b/command.html
@@ -1,16 +1,7 @@
-<h2>현재 사용가능한 명령어</h2>
+커맨드 설명서는 현재 준비중입니다.
 
-<h3>
-안녕<br>
-무엇을 할 수 있어?<br>
-기분 좋아<br>
-크리스티나<br>
-나무위키<br>
-너는 이미 죽어있다<br>
-타임머신은 가능할까?<br>
-넌 누구야<br>
-크롬 열어<br>
-</h3>
+커맨드는 설치폴더 내의 "database.txt"파일을 참고해 주세요.
 
+기본 설치폴더 : C:\Program Files (x86)\AMADEUS
 
 
