--- a/index.html
+++ b/index.html
@@ -787,7 +787,7 @@ var STYLE_PREFIX = 'wsite';
         <div class="container">
           <div class="logo"><span class="wsite-logo">
 
-	<a href="https://download.amadeuspython.ml/">
+	<a href="https://amadeus.progrm.net/">
 		<img src="./index_files/amadeuslogo.png">
 	</a>
 
